Version 0.1  20080311
~~~~~~~~~~~
Initial version

Version 0.2  20080518
~~~~~~~~~~~
Add XML parsing routines
More structured document types
Add generic document union and associated processing
NRAO-DiFX version 1.1

Version 0.3  20080715
~~~~~~~~~~~
New branch version post version 1.1
Add table (enum) of error levels
Rename ERROR to ALERT
Binary message sending, intended for Short Term Accumations (STAs)
Don't assume default PORT and GROUP
Add DifxMessageParameter type
  Note: mpiid is a target parameter for this message type, not a source parameter
Add DifxMessageStart 
Started distinguishing between STA and LTA types

Version 0.4 20090121
~~~~~~~~~~~
Escape characters in xml messages: < > & ' "
  see http://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references
Add initial version of "mk5display", a python gui to watch a bank of Mark5 units. 
  This is basically a toy, not for real use at the moment.
Add difxStopMessage
Add difxlog

Version 0.5 20090131
~~~~~~~~~~~
Complete change from DifxMessageError to DifxMessageAlert
Add Mark5Version message type